feat(garage): initial functionality

--- a/Async Race/src/views/garage.html
+++ b/Async Race/src/views/garage.html
@@ -1,1 +1,20 @@
 <h2>Garage</h2>
+<div class="controll"></div>
+<form name="create">
+  <input name="name" id="create-name" />
+  <input name="color" type="color" name="color" id="" />
+  <button>Create</button>
+</form>
+<form name="update">
+  <input type="text" name="name" />
+  <input type="color" name="color" value="#000000" />
+  <input name="id" />
+  <button>Update</button>
+</form>
+<button id="generate">Generate 100 cars</button>
+<div class="cars-container"></div>
+<div id="pagination">
+  <button>Prev</button>
+  <span>1</span>
+  <button>Next</button>
+</div>
