feat(garage): add pagination

--- a/Async Race/src/views/garage.html
+++ b/Async Race/src/views/garage.html
@@ -9,12 +9,13 @@
   <input type="text" name="name" />
   <input type="color" name="color" value="#000000" />
   <input name="id" />
-  <button>Update</button>
+  <button type="submit" disabled name="button">Update</button>
 </form>
 <button id="generate">Generate 100 cars</button>
+<div>Total:<span id="total"></span></div>
 <div class="cars-container"></div>
 <div id="pagination">
-  <button>Prev</button>
+  <button disabled>Prev</button>
   <span>1</span>
   <button>Next</button>
 </div>
