feat(garage): add each car animation

--- a/Async Race/public/main.css
+++ b/Async Race/public/main.css
@@ -1,9 +1,23 @@
 /*!*************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/garage.css ***!
   \*************************************************************************/
-.container{
+.container {
   background: black;
 }
-form input[name=id]{
+form input[name="id"] {
   display: none;
 }
+/* .stop-btn:before {
+  border: 10px solid black;
+  content: "";
+} */
+.car-container {
+  position: relative;
+  height: 80px;
+}
+.car-container svg {
+  position: absolute;
+  left: 0;
+  z-index: -1;
+}
+
