--- a/Async Race/src/views/garage.html
+++ b/Async Race/src/views/garage.html
@@ -6,11 +6,13 @@
   <button>Create</button>
 </form>
 <form name="update">
-  <input type="text" name="name" />
-  <input type="color" name="color" value="#000000" />
+  <input type="text" name="name" disabled />
+  <input type="color" name="color" disabled value="#000000" />
   <input name="id" />
   <button type="submit" disabled name="button">Update</button>
 </form>
+<button id="race">Race</button>
+<button id="reset">Reset</button>
 <button id="generate">Generate 100 cars</button>
 <div>Total:<span id="total"></span></div>
 <div class="cars-container"></div>
