--- a/Async Race/public/main.css
+++ b/Async Race/public/main.css
@@ -21,3 +21,12 @@ form input[name="id"] {
   z-index: -1;
 }
 
+/*!***********************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/root.css ***!
+  \***********************************************************************/
+body {
+  margin: 0;
+  background: black;
+  color: aliceblue;
+}
+
