feat(winners): initial create view & functionality

--- a/Async Race/public/main.css
+++ b/Async Race/public/main.css
@@ -30,3 +30,10 @@ body {
   color: aliceblue;
 }
 
+/*!**************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/winners.css ***!
+  \**************************************************************************/
+.header-clickable {
+  cursor: pointer;
+}
+
