--- a/Async Race/src/views/winners.html
+++ b/Async Race/src/views/winners.html
@@ -1,1 +1,20 @@
-<h2>Winners</h2>
+<h2>Winners (<span id="total"></span>)</h2>
+<table>
+  <thead>
+    <tr>
+      <td>№</td>
+      <td>Car</td>
+      <td>Name</td>
+      <td class="header-clickable">Wins<span></span></td>
+      <td class="header-clickable time">Best time<span></span></td>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
+<div class="pagination">
+  <button>Prev</button>
+  <span id="page">1</span>
+  of
+  <span id="total-pages">?</span>
+  <button>Next</button>
+</div>
