feat: complete pagination in garage & winners

--- a/Async Race/src/views/garage.html
+++ b/Async Race/src/views/garage.html
@@ -1,4 +1,4 @@
-<h2>Garage</h2>
+<h2>Garage (<span id="total"></span>)</h2>
 <div class="controll"></div>
 <form name="create">
   <input name="name" id="create-name" />
@@ -14,10 +14,4 @@
 <button id="race">Race</button>
 <button id="reset">Reset</button>
 <button id="generate">Generate 100 cars</button>
-<div>Total:<span id="total"></span></div>
 <div class="cars-container"></div>
-<div id="pagination">
-  <button disabled>Prev</button>
-  <span>1</span>
-  <button>Next</button>
-</div>
