--- a/Async Race/src/components/garage/garage.css
+++ b/Async Race/src/components/garage/garage.css
@@ -1,13 +1,9 @@
-.container {
+/* .container {
   background: black;
-}
+} */
 form input[name="id"] {
   display: none;
 }
-/* .stop-btn:before {
-  border: 10px solid black;
-  content: "";
-} */
 .car-container {
   position: relative;
   height: 80px;
