--- a/Async Race/src/views/header.html
+++ b/Async Race/src/views/header.html
@@ -1,5 +1,5 @@
 <h2>Header</h2>
 <nav>
-  <a href="#winners"><button id="to-winners">To winners</button></a>
-  <a href="#garage"><button id="to-garage" disabled>To garage</button></a>
+  <a href="#winners"><button class="to-winners button">To winners</button></a>
+  <a href="#garage"><button class="to-garage button">To garage</button></a>
 </nav>
