feat(garage): btns disabling depend on state of race

--- a/Async Race/src/views/garage.html
+++ b/Async Race/src/views/garage.html
@@ -12,6 +12,6 @@
   <button type="submit" disabled name="button">Update</button>
 </form>
 <button id="race">Race</button>
-<button id="reset">Reset</button>
+<button id="reset" disabled>Reset</button>
 <button id="generate">Generate 100 cars</button>
 <div class="cars-container"></div>
