feat: use webpack dev-server to develop

--- a/Async Race/src/views/header.html
+++ b/Async Race/src/views/header.html
@@ -1,4 +1,4 @@
-<h2>Header</h2>
+<h1 class="title">Async race</h1>
 <nav>
   <a href="#winners"><button class="to-winners button">To winners</button></a>
   <a href="#garage"><button class="to-garage button">To garage</button></a>
