--- a/Async Race/src/views/garage.html
+++ b/Async Race/src/views/garage.html
@@ -1,17 +1,18 @@
 <h2>Garage (<span id="total"></span>)</h2>
-<div class="controll"></div>
-<form name="create">
-  <input name="name" id="create-name" />
-  <input name="color" type="color" name="color" id="" />
-  <button>Create</button>
-</form>
-<form name="update">
-  <input type="text" name="name" disabled />
-  <input type="color" name="color" disabled value="#000000" />
-  <input name="id" />
-  <button type="submit" disabled name="button">Update</button>
-</form>
-<button id="race">Race</button>
-<button id="reset" disabled>Reset</button>
-<button id="generate">Generate 100 cars</button>
+<div class="controll">
+  <form name="create">
+    <input name="name" id="create-name" />
+    <input name="color" type="color" name="color" id="" />
+    <button>Create</button>
+  </form>
+  <form name="update">
+    <input type="text" name="name" disabled />
+    <input type="color" name="color" disabled value="#000000" />
+    <input name="id" />
+    <button type="submit" disabled name="button">Update</button>
+  </form>
+  <button id="race">Race</button>
+  <button id="reset" disabled>Reset</button>
+  <button id="generate">Generate 100 cars</button>
+</div>
 <div class="cars-container"></div>
