--- a/Async Race/src/views/garage.html
+++ b/Async Race/src/views/garage.html
@@ -2,7 +2,7 @@
 <div class="controll">
   <form name="create">
     <input name="name" id="create-name" />
-    <input name="color" type="color" name="color" id="" />
+    <input name="color" type="color" name="color" />
     <button>Create</button>
   </form>
   <form name="update">
