--- a/Async Race/src/views/header.html
+++ b/Async Race/src/views/header.html
@@ -1,5 +1,5 @@
 <h1 class="title">Async race</h1>
 <nav>
-  <a href="#winners"><button class="to-winners button">To winners</button></a>
-  <a href="#garage"><button class="to-garage button">To garage</button></a>
+  <a href="#winners"><button class="to-winners button">Winners</button></a>
+  <a href="#garage"><button class="to-garage button">Garage</button></a>
 </nav>
