--- a/Async Race/src/components/header/header.css
+++ b/Async Race/src/components/header/header.css
@@ -1,6 +1,6 @@
 .title {
-  text-transform: uppercase;
   text-align: center;
+  text-transform: uppercase;
 }
 
 nav {
@@ -9,4 +9,8 @@ nav {
 
 nav * {
   margin-inline: 10px;
+}
+
+nav .button:disabled {
+  border-color: var(--main-red);
 }
