style: garage page styling

--- a/Async Race/src/components/car_container/view.html
+++ b/Async Race/src/components/car_container/view.html
@@ -1,5 +1,5 @@
-<button class="select-btn button">Select car</button>
-<button class="remove-btn button">Remove car</button>
+<div class="name"></div>
+<button class="select-btn ctrl-btn">Select car</button>
+<button class="remove-btn ctrl-btn">Remove car</button>
 <button class="go-btn button">Go!</button>
 <button class="stop-btn button" disabled>Stop</button>
-<span class="name">Tesla</span>
