--- a/Async Race/src/components/winners/winners.css
+++ b/Async Race/src/components/winners/winners.css
@@ -1,3 +1,21 @@
 .header-clickable {
   cursor: pointer;
 }
+
+table td {
+  padding: 0 10px;
+  text-align: center;
+}
+
+thead {
+  font-size: 1.2rem;
+  color: var(--main-blue);
+}
+
+tr:nth-child(even) {
+  background-color: #383838;
+}
+
+table {
+  border-collapse: collapse;
+}
