--- a/Async Race/src/components/popup/popup.css
+++ b/Async Race/src/components/popup/popup.css
@@ -7,21 +7,19 @@
   flex-direction: column;
   justify-content: space-around;
   animation: entry 1s linear forwards;
-  border: 4px double gold;
   border-radius: 5px;
   width: 360px;
   height: 180px;
   padding: 10px;
-  background: gray;
   text-align: center;
   color: palegoldenrod;
-  outline: 2px solid aliceblue;
 }
 
 .cross {
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
+  opacity: 0.4;
   cursor: pointer;
 }
 
