--- a/main.css
+++ b/main.css
@@ -1,6 +1,25 @@
+@keyframes flash {
+  0%,
+  95% {
+    opacity: 0.7;
+    color: inherit;
+    transform: rotateY(90deg) scale(1.5);
+  }
+}
+
+.letter {
+  animation: flash 2s infinite;
+  animation-delay: calc(0.07s * var(--i));
+  color: white;
+  opacity: 1;
+  transform: rotateZ(45deg);
+}
+
 .title {
-  text-align: center;
+  text-align: right;
   text-transform: uppercase;
+  margin-right: 3rem;
+  font-size: 2.5rem;
 }
 
 nav {
