feat: add flesh title

--- a/Async Race/src/components/header/header.css
+++ b/Async Race/src/components/header/header.css
@@ -1,6 +1,8 @@
 .title {
-  text-align: center;
+  text-align: right;
   text-transform: uppercase;
+  margin-right: 3rem;
+  font-size: 2.5rem;
 }
 
 nav {
